--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <li><a href="projects.html">Projects</li>
 
-    <li><a href="https://notrelated.xyz">Resume</a></li>
+    <li><a href="pictures/resume.pdf">Resume</a></li>
 
 
 </ul>
