--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,17 @@
 
 </ul>
 </nav>
-<h2>Well...here we go</h2>
-<p>Hey there, my name is Rohit and this is my website. You might wonder why does it looks so 1990s. That is because I intend it to be that way, making a simple website doesn't need to involve a dozen frameworks. I admire people like Luke Smith, Richard Stallman and appreciate philosophies of UNIX. Keeping things simple and avoiding the omnipresent over-engineering is the main motive here.</p>
+<h2>Mail me...</h2>
+<img src="pictures/email.svg" style="max-width: 20%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
+<h3><a href="mailto:rohitchouhan07@gmail.com">rohitchouhan07@gmail.com</a></h3></br>
+
 
 <img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
-<h2>I recommend having a quick look at my blog before leaving</h2>
-<p>I write about all the things that comes to my mind there. It is my personal social media, actually it is the type of social media that we all deserve.</p>
+
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
-    <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
+    <a href="contact/contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
     <a href="blogindex.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
     <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
 </footer>
