--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <nav>
 <ul class="menubar">
 
-    <li><a href="main.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
 
     <li><a href="blog.html">Blog</a></li>
 
@@ -27,12 +27,12 @@
 <h3><a href="mailto:rohitchouhan07@gmail.com">rohitchouhan07@gmail.com</a></h3></br>
 
 
-<img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
+<img src="pictures/pika.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
-    <a href="contact/contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
+    <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
     <a href="blogindex.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
     <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
 </footer>
