--- a/blog.html
+++ b/blog.html
@@ -22,27 +22,14 @@
 
 </ul>
 </nav>
-<h2>Here are a few projects that I have done...</h2>
-<img src="pictures/spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
-<h3>Intelligent Traffic Lights Using Reinforcement Learning</h3>
-<p>Distressed with the increasing traffic in my city, I decided to undertake a project that
-could have some value in the future. We Started off by conducting literature survey,
-soon to discover that there has been some solid work done in the field. We
-expanded our research to be more in line with the Indian Traffic conditions and the
-results we were able to achieve were significant. We achieved a 74% performance
-improvement over a standard traffic light.<br>
-<a href="https://github.com/rohitchouhan07/Deep-QLearning-Agent-for-Traffic-Signal-Control">Here is the link to the source</a></p>
+<h2>Here are my thoughts on various things...</h2>
+<img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+<h3>Why this website?</h3>
+<p>The covid lockdown gave me much needed time to sort out my priorities, I had the luxury to truly discover my own thinking and ideologies. Away from other people's thoughts and opinions I thought in a vaccuum about where technology is taking us. I took on anexperiment to try tiling window manager on my linux machine, and i'm glad that I did that. At first I thought about the people who used tiling window managers as wannabe-eletist just for the heck of it, to look cooler, I took the leap and fast forward to august, I am using arch with bspwm on my Linux machine.
+<p>It taught me a very important lesson that less is more, the abundance of technology that seems to make things earier for us ends up doing quite the opposite, I realised how easy and simple things saves time and are more efficient in the longer run, I short we all are bloating ourselves when it comes to technology, rather then adding to our abilities, it is taking a toll on us.
+<p>One fine day, Luke made a video on how we all should have a personal website, and how this makes a lot more sense instead of using those so called big platforms to express ourselves, I always wanted a place where I could write whatever I want to. So here we are, at my very own personal space, free from all the framework bloat, created only using plain HTML and CSS.
+<h4><small>August 15 2020</small></h4>
 
-
-<h3>Navigation Bar and Status bar customisation for Android</h3>
-<p>These are theme-ing apps that work alongside the Substratum theme engine for
-Android to change and customize navigation and status bar of an android device.
-I made them possible using guides from the theme community, Android Studio,
-GIMP, Adobe Illustrator and JAVA.
-The Apps are called “[Substratum] Navigate theme” and “[Substratum] Status
-theme”.
-“Navigate” theme has crossed 300K downloads on Google Play Store.<br>
-<a href="https://play.google.com/store/apps/details?id=com.rc.navigate&hl=en_IN">Link to play store</a></p>
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
