--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </ul>
 </nav>
 <h2>Well...here we go</h2>
-<p>Hey there, my name is Rohit and this is my website. You might wonder why does it looks so 1990s. That is because I intend it to be that way, making a simple website doesn't need to involve a dozen frameworks. I admire people like Luke Smith, Richard Stallman and appreciate philosophies of UNIX. Keeping things simple and avoiding the omnipresent over-engineering is the main motive here.</p>
+<p>Hey there, my name is Rohit and this is my website. You might wonder why does it looks so 1990s. That is because I intend it to be that way, making a simple website doesn't need to involve a dozen frameworks. I admire people like Luke Smith and appreciate philosophies of UNIX. Keeping things simple and avoiding the omnipresent over-engineering is the main motive here.</p>
 
 <img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
 <h2>I recommend having a quick look at my blog before leaving</h2>
