--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,8 @@ The Apps are called “[Substratum] Navigate theme” and “[Substratum] Status
 theme”.
 “Navigate” theme has crossed 300K downloads on Google Play Store.<br>
 <a href="https://play.google.com/store/apps/details?id=com.rc.navigate&hl=en_IN">Link to play store</a></p>
+<h3>Covid Status Script for my State</h3>
+<p>A simple one liner shell script to quickly see the last day stats of covid-19 in my state. The data is fetched from a csv file maintained by the guys at covid19india.org.
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
