--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact/contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
-    <a href="blogindex.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
+    <a href="blog.html"><img src="pictures/blog.svg" alt="Blog" title="Blog"> BLOG</a> &mdash;
     <a href="rss.xml"><img src="pictures/rss.svg" alt="RSS" title="Subscribe to my RSS feed for updates."> RSS</a>
 </footer>
 
