new blog post and fixed projects gif

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 </ul>
 </nav>
 <h2>Here are a few projects that I have done...</h2>
-<img src="pictures/spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+<img src="pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 <h3>Intelligent Traffic Lights Using Reinforcement Learning</h3>
 <p>Distressed with the increasing traffic in my city, I decided to undertake a project that
 could have some value in the future. We Started off by conducting literature survey,
