--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
 <ul class="menubar">
 
-    <li><a href="main.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
 
     <li><a href="blog.html">Blog</a></li>
 
