--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,14 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>Why "Getting over it" is a great game</h3>
+<p>Unless you are living under a rock, you know what Getting over it is. Right?. Okay, let me explain a bit, it is a game where you have to darg youreself on top of  mountain to reach to the top and eventually throw youreself up into space. All of this just using a hammer while you are stuck in a pot. 
+<p>But the main thing about that game, that stuck me as player is the fact that this game conveys a metaphorical meaning, that is often overlooked by all the streamers and youtubers who are shouting at top of their voices about how frustrating the game is. The game signifies the challenges that we face in life, and how we bail out on some of the difficult challenges, calling them frustrating or impossible. 
+<p>The game is designed in such a way that you will fall back to the starting point numerous times, and this is the very reason that a lot of people find it frustrating. But to me, this is the beauty of this game. 
+<p>In this age technology has made some of the difficult challenges or tasks look mundane or peice of cake, but when in we are presented the same task without out tech gadgets, we find the same task impossible. This is signified by the characted being stuck in a pot with just a hammer.  
+<p>What I especially liked about the game was its voiceover and its difficluty level. And that is posed a real challenge and required a good level of patience and persistence. And these two are the major takeaways from the game, other than the feeling you get when you complete the game and GET OVER IT.
+<h4><small>September 12 2020</small></h4>
+
 <h3>How I went from loving mobile phones to hating them!</h3>
 <p>First things first, I am not an anti-communication guy. By mobile phones I mean to say smartphones and to be more specific the state of smartphones after 2016. With this out of the way lets get started.
 <p>I was a big time smarthphone nerd back in the days, I think my interest kindled by the launch of Samsung Galaxy Nexus, I was attracted to the infant andorid OS at that time, because it had a nerdy appeal to it. Anyways, I became the guy to followed phones very passionately. I used to watch a lot of youtube videos and was alway ahead of the curve when it came to smarthphone tech.
