--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Rohit Chouhan's low-tech Website</h1>
+<h1>Rohit Chouhan's old-school website</h1>
 <nav>
 <ul class="menubar">
 
