--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
 <h3>Switched to linux full time</h3>
-<p>I was a passionat linux user for quite some time now, 4-5 years maybe. I started it of as a hobby to compile custom kernels and ROMs for my galaxy nexus, so I dual booted my aging pc with windblows and ubuntu. And I never looked back since then, always had a linux machine at my disposal there after. 
+<p>I was a passionate linux user for quite some time now, 4-5 years maybe. I started it of as a hobby to compile custom kernels and ROMs for my galaxy nexus, so I dual booted my aging pc with windblows and ubuntu. And I never looked back since then, always had a linux machine at my disposal there after. 
 When I switched to my new pc, I kept it a single boot system for a long time and had my pentium laptop run linux on it.<p>
 All thanks to the corona-chan I dug deeper and deeper into this linux rabbit hole and soon found myself hating to use windows even for small and trivial tasks, the idea was planed in my mind to go linux all-out. So I made up my mind to go linux on my PC as well, and here I am writing this blog on Arch linux with DWM, using vim for writing my blog. But windows still lives in my PC. Because I have other people using this PC as well, and they do not want to give up thier ablility to game on this PC in thier free time, so I had to respect that being an avid pc gamer myself. I will be updating my linux journey as it goes.
 <h4><small>November 02 2020</small></h4> 
