--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,10 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>Quitting YouTube for 15 days</h3>
+<p>Do you even need a reason to quit watching videos on youtube? 90% of the videos that I watch on youtube is garbage anyways, so whats the point of watching them, and the remaining 10 % is entertainment. Instead I will be investing my time in restarting my channel. I willbe starting wit 15 days as a target but the plan I to get rid of this cheap time killer once and for all. Stay tuned for my new videos on my channel.
+<h4><small>November 08 2020</small><h4>
+
 <h3>Switched to linux full time</h3>
 <p>I was a passionate linux user for quite some time now, 4-5 years maybe. I started it of as a hobby to compile custom kernels and ROMs for my galaxy nexus, so I dual booted my aging pc with windblows and ubuntu. And I never looked back since then, always had a linux machine at my disposal there after. 
 When I switched to my new pc, I kept it a single boot system for a long time and had my pentium laptop run linux on it.<p>
