--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,26 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>End work/study from home!! por favor.</h3>
+<p>Maybe somewhere down the line reading this again, I might be laughing at my opinions, but this is what I feel at the moment. Having a brother studying through online mode, and 
+myself as victim of a small scammy startup (more on this later), woking from home.
+<p>Epidemiologists and scientists know better about the current state of pandemic and what effect would reopening of schools and colleges would have on the number of infected people.
+But I can see all the adverse effects of this work from home scam. When we talk about all the big corporate giants and even the small ones, most of them are operating in work from home 
+mode. Now this is both a boon and a bane but right now at the present state I think the employees are being the ones who are being exploited. Number one, these companies are saving 
+a huge amount of money in terms of their rent or running costs for an office. Enmployees are getting the benifit of saving huge amounts of time wasted in commute (is that time really wasted?)
+But the work that these companies are extracting out of their employees has only got up and their is no professionalism from the bosses. They want their work and will call to you anytime
+about that. Now the worst thing is that the new joinees for whom it is very important to know and build a relationship with their colleagues is now non existent, what it feels like is that 
+you are working for a computer or a robot who is giving you instructions and deadlines. This is the last thing that you want to do.
+<p>Now schools are a bit tricky since people will say that they don't want to send their kids and expose them to the risk of getting infected. Now I would say that their are a 100 other 
+ways that they could get infected. But lets leave that topic.
+<p>Now this thing called online classes is very easy to bash beacause it has total 0 advantages. All the things that you want from a school are totally dismissed. A good-student teacher
+relationship, absent. Heck, student see teacher as a google meet account and nothing else. A place to meet and make friends, nope not here. Some time away from home to learn, explore and enjoy.
+No not anymore sir. 
+And I can go on for days on the bad things that online classes bring. Schools here are taking full fees but saving huge operating costs. What is this?
+parents should get atleast a 50% off on the fees. I see the education system deteriorating in quality because of this online class menace.
+<h4><small>November 15 2020</small></h4>
+
+
 <h3>Quitting YouTube for 15 days</h3>
 <p>Do you even need a reason to quit watching videos on youtube? 90% of the videos that I watch on youtube is garbage anyways, so whats the point of watching them, and the remaining 10 % is entertainment. Instead I will be investing my time in restarting my channel. I willbe starting wit 15 days as a target but the plan I to get rid of this cheap time killer once and for all. Stay tuned for my new videos on my channel.
 <h4><small>November 08 2020</small><h4>
