--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,18 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>Groff is not a meme!</h3>
+<p>Wanted to write an essay with good professional formatting and everything, can't even think of MS word to write and then export to pdf. So, libre office came to my mind. didn't want 
+to install tons of dependencies just to make a simple formatted pdf.
+<p>Latex was also in option, and is a great option indeed but this time I went with something even more minimal, so minimal and barebone that I thought it was a meme started by Luke Smith
+, went ahead and wrote the essay in plain text using markup and then using groff to make a pdf out of it.
+<p>I must admit, I was impressed with how good the document came out to be, I was more focused about writing the content rather than fixing the wierd formatiing issues that comes with 
+complicated software usage. 10/10 Highly recommended.
+<em>Minimalism is not a meme</em>
+<h4><small>November 18 2020</small></h4>
+
+
+
 <h3>End work/study from home!! por favor.</h3>
 <p>Maybe somewhere down the line reading this again, I might be laughing at my opinions, but this is what I feel at the moment. Having a brother studying through online mode, and 
 myself as victim of a small scammy startup (more on this later), woking from home.
