--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Rohit Chouhan's low-tech Website</title>
+<title>Rohit Chouhan's old-school Website</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 <meta charset="utf-8"/>
 </head>
