--- a/blog.html
+++ b/blog.html
@@ -26,10 +26,10 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
 <h3>The only productive app for smarthphones and quitting video games for a week</h3>
-<p>Duolingo, the only useful way that I found for spending time on my cell phone. I only know two languages at the moment, sanskrit, maybe? I studied the language sanskrit in my school
+<p>Duolingo, the only useful way that I found for spending time on my cell phone. I only know two languages at the moment english and hindi, sanskrit, maybe? I studied the language sanskrit in my school
 <p>Did very good in that subject, but after that I never took up the task of learning another language. At first I wasn't sure about how long I would be able to continue with my course on 
 spanish, but the method of teaching is pretty good and I highly recommend everyone to check the app out ans use it. Learning a new language is always better than scrolling social media feed.
-<p>My experiment on quitting youtube for 15 days has been somewhat of a success, although I am not able to completely avoid the use of YT for anything, coz I still watched a few videos a day.
+<p>My experiment on quitting youtube for 15 days has been somewhat of a success, although I am not able to completely avoid the use of YT, coz I still watch few videos a day.
 The good thing is that my habbit of aimlessly opening YT and scrolling for hours is under check till now, and I don't have the urge to do that anymore.
 <p>Following along the line of YT experiment I have decided to avoid playing computer games for a week and read a book or learning guitar instead. We will see how it goes.
 <h4><small>November 21 2020</small></h4>
