--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,15 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>"The rudest book ever" by Shwetabh Gangwar is not a typical self motivation book.</h3>
+<p>Being a regular visitor at his YT channel, it was a no brainer to pick this book up. When you watch a lot of his videos, you kinda get his philosophy and ideology on various aspects. 
+<p>Before reading this, I was a bit worried that I would find this book like his motivating videos and the book would be a mere repetetion of it. But this book is not like that. It presents some new "perspectives" of the author
+that forces you to think and eventually re-wire your brain according to the things that resonate with you. There is no heuristics given by the author, but his perspecives. And I must
+say that the book really forces you to think and definitely has a lasting effect on your thinking and your perspectives. In fact, the purpose of the book is to teach us how to think.
+<p>Part of the reason why I write my reviews after some months of reading a book is to assess the book on its lasting impact as well. All and all I must say that this book I worth a
+read and one should definitely read it. It's not like "The subtle art of not giving a F" but in some ways teaches you "not to give a F" better than the former one.
+<h4><small>November 27 2020</small></h4>
+
 <h3>The only productive app for smarthphones and quitting video games for a week</h3>
 <p>Duolingo, the only useful way that I found for spending time on my cell phone. I only know two languages at the moment english and hindi, sanskrit, maybe? I studied the language sanskrit in my school
 <p>Did very good in that subject, but after that I never took up the task of learning another language. At first I wasn't sure about how long I would be able to continue with my course on 
