--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,14 @@
 </nav>
 <h2>Here are a few projects that I have done...</h2>
 <img src="pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+
+
+<h3>Phetch</h3>
+<p>A small little POSIX compliant shell script to print out useful/unuseful
+information in your terminal.
+<p>Will be expanding this till it's maturity to keep an eye on that!!
+<a href="github.com/rohitchouhan07/phetch">Link to the source</a>
+
 <h3>Intelligent Traffic Lights Using Reinforcement Learning</h3>
 <p>Distressed with the increasing traffic in my city, I decided to undertake a project that
 could have some value in the future. We Started off by conducting literature survey,
