--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,18 @@
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>I failed</h3>
+<p>I took a challenge of not playing video games for a week, and I failed on
+the third day or so. I don't know why but whenver I feel lack of motivtion
+I have a strong urge to play some games. Avoiding Youtube wasn't this
+difficult. 
+<p>I think its all the matter of will power and replacing a bad recreational
+habbit with a better one (or less harmful one). I have picked up on my habbit
+of reading books again. I am reading Origin by Dan Brown, its enjoyable and
+thrilling as always. From now on I am going with the strategy of minimizing
+rather than abstinence. Let's see how it goes.
+<h4><small>December 04 2020</small></h4>
+
 <h3>"The rudest book ever" by Shwetabh Gangwar is not a typical self motivation book.</h3>
 <p>Being a regular visitor at his YT channel, it was a no brainer to pick this book up. When you watch a lot of his videos, you kinda get his philosophy and ideology on various aspects. 
 <p>Before reading this, I was a bit worried that I would find this book like his motivating videos and the book would be a mere repetetion of it. But this book is not like that. It presents some new "perspectives" of the author
