New project and a fixed link

--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,18 @@
 <h2>Here are a few projects that I have done...</h2>
 <img src="pictures/Spiderman4.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
 
+<h3>Chords</h3>
+<p>A simple program to print out common guitar chord shapes right in your
+terminal. Maybe posix compliant, I am not too sure about that.
+<p>
+<a href="https://github.com/rohitchouhan07/chords">Link to the source</a>
 
 <h3>Phetch</h3>
 <p>A small little POSIX compliant shell script to print out useful/unuseful
 information in your terminal.
 <p>Will be expanding this till it's maturity to keep an eye on that!!
 <p>
-<a href="github.com/rohitchouhan07/phetch">Link to the source</a>
+<a href="https://github.com/rohitchouhan07/phetch">Link to the source</a>
 
 <h3>Intelligent Traffic Lights Using Reinforcement Learning</h3>
 <p>Distressed with the increasing traffic in my city, I decided to undertake a project that
