--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,34 @@
 </ul>
 </nav>
 <h2>Here are my thoughts on various things...</h2>
-<img src="pictures/think.gif" style="max-width: 50%;margin: auto; display: block;" alt="Pika..pi" title="Pika..pi">
+<img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
+block;" alt="Pika..pi" title="think">
+<h3>Where are we going?</h3>
+<p>Reading Dan Brown's origin got me thinking about the future of human species
+once again. I haven't read homo dues yet, so my oinions are not influenced yet.
+Like all the other Dan books, the story was an amalgamation of science,
+relegion, history and symbology. This time the big question was. Where do we
+come from and where are we going. 
+<p>IMO the first question isn's as important as the second one. Hear me out,
+although it is great to know all the details of our origin, but the thing is
+that even after knowing that we won't be able to change it.
+Coming to the second question, it holds much more value. Isn't it obvious that
+the answer to that question lies in our hands?
+<p>Where are we going? The future of human species is in our control. Well not
+exactly, but in control of some humans only. So its only a matter of choice.
+Whether we want to live a star wars life or we want to continue living on earth
+and keep exploiting its resources.
+<p>The thing that I am worried about is the increasing intrusion of technology
+in our animal ways. How smooth would be the trasition, where human and tech and
+going to be increasingly fused together. 
+<p>Or is there any other way? The way in which we cannot force our evolution
+into a cyberhuman species but plan it into something better. I only want more
+and more people to stop thinking about this, so that the species can make
+a commulative decesion and we control "where are we going". But the choice of
+going with the flow is also good, as it sometimes prove to be better than the
+pre-meditated ones. But nonetheless the near future is going to be one hell of
+a ride.
+<h4><small>December 12 2020</small></h4>
 
 <h3>I failed</h3>
 <p>I took a challenge of not playing video games for a week, and I failed on
