--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,28 @@
 </nav>
 <h2>Here are my thoughts on various things...</h2>
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
-block;" alt="Pika..pi" title="think">
+block;" alt="think" title="think">
+
+<h3>The new and shiny (my newest shower thought)</h3>
+<p>Why is it so that, whenever a newer verison of something comes out, we usually tend to like it more than the older
+one. I am specifically talking here about te design aspect of things, it is obvious that the newer ones will be better
+technologically (should be in theory). 
+<p>What got me thinking about it was the newer versions of cars and phones. Let's start with the example of cars. Design
+is ought to be subjective but yet when we see the same car but different generations of it, our brain can automatiacally
+find which one is newer and more contemporary. Is it so because the newer designs are better subjectively? If so, then
+what is the extent to which we can improve the design of objects so that the newer iteration is an obvious improvment
+over the previous one.
+<p>In a lot of areas we observe that things go in sort of a loop. Like in clothing and fashion. Round glasses came back
+to fashion again and all those squared ones automatically appear old to us. Same happened with iphone 12, they went back
+to squared sides from the round ones. When we had rounded sides we all felt that it was better than the flat ones. Yet
+here we are again having a notion that flat is better than rounded. 
+<p>I think the most of the times its our brain that is tricking us about the new and shiny. I sometimes think that human
+brain is wired in a way that it like the newer and changed design even if it is from the past. The reason being unknown
+to me, but someone decided that these creatures always need to make something new and shiny and like it better than the
+old one. I think this is the reason why I am here typing something and putting that on my website instead of hunting my
+meal.
+<h4><small>December 17 2020</small></h4>
+
 <h3>Where are we going?</h3>
 <p>Reading Dan Brown's origin got me thinking about the future of human species
 once again. I haven't read homo dues yet, so my oinions are not influenced yet.
