Lets get this up and running quickly.

--- a/chords.html
+++ b/chords.html
@@ -2,12 +2,22 @@
 <html lang ="en">
   <head>
     <title>Some chords</title>
-    <link rel='stylesheet' type='text/css' href='chord_style.css'>
+    <link rel='stylesheet' type='text/css' href='chords_style.css'>
     <meta charset="utf-8"/>
   </head>
   <body>
-    <h1>Some Chords</h1>
-    <h3>Because all the other websites for checking out chord shapes are bloated</h3>
+    <pre style="position:sticky;text-align:center">
+     _____  ___   ___ ___    ___         __  __ __   ___   ____   ___   _____
+    / ___/ /   \ |   |   |  /  _]       /  ]|  |  | /   \ |    \ |   \ / ___/
+   (   \_ |     || _   _ | /  [_       /  / |  |  ||     ||  D  )|    (   \_ 
+    \__  ||  O  ||  \_/  ||    _]     /  /  |  _  ||  O  ||    / |  D  \__  |
+    /  \ ||     ||   |   ||   [_     /   \_ |  |  ||     ||    \ |     /  \ |
+    \    ||     ||   |   ||     |    \     ||  |  ||     ||  .  \|     \    |
+     \___| \___/ |___|___||_____|     \____||__|__| \___/ |__|\_||_____|\___|
+                                                                                  
+      Because all the other websites are bloated
+
+    </pre>
   </body>
 </html>
 
