--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <li><a href="pictures/resume.pdf">Resume</a></li>
 
-    <li><a href="chord/chords.html">Chords</a></li>
+    <li><a href="chords/chords.html">Chords</a></li>
 
 </ul>
 </nav>
