--- a/chords/a.html
+++ b/chords/a.html
@@ -5,8 +5,8 @@
     <link rel='stylesheet' type='text/css' href='chords_style.css'>
     <meta charset="utf-8"/>
   </head>
-  <body style="max-width: 900px;margin-left: auto;margin-right: auto">
-    <pre style="position:sticky;font-size:15px">
+  <body>
+    <pre style="position:sticky;text-align:justified;font-size:15px;">
   _____  ___   ___ ___    ___         __  __ __   ___   ____   ___   _____
  / ___/ /   \ |   |   |  /  _]       /  ]|  |  | /   \ |    \ |   \ / ___/
 (   \_ |     || _   _ | /  [_       /  / |  |  ||     ||  D  )|    (   \_ 
@@ -21,13 +21,8 @@ Because all the other websites are bloated
 <a href=e.html>E chords</a>  <a href=f.html>F chords</a>  <a href=g.html>G chords</a>
 
 
-Ideology
--------------------------------------------------------------------------------
-I am a newbie guitar player and I require to look at chord shapes every now and 
-then, whenever I google searched I found out that websites were doing all the 
-things that I didn't ask for. Like 10 ads, 20 courses etc. So I made my own 
-reference with just guitar chord shapes.
     </pre>
   </body>
 </html>
+
 
