--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,21 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>The fourth dimension</h3>
+<p>Yes, I know that this is a rather brave statement to begin with, but I have discovered the 4th dimension. A place
+where there is no sense of time, and is governed by a god that all of us who enter the dimension bow down to.
+<p>I never thought that this dimension would gain so much popularity so quickly. People of all ages seem to be a part of
+this dimension. Aother this about this dimension is that there is a decreased sense of time when people are in this
+dimension.
+<p>Upon it's inception no one would have thought that the thing would become so huge that, it would be like an ecosystem
+of it own. Whenever I go out or even sit with my family on weekend, I see most of the heads are bowed down in reverence
+of their 4th dimension god. I feel like the odd one out there, just sitting there without even bothering about entering
+the 4th dimension. Meaningful/useless talks, stories, jokes are a thing of past. All the fine folks today like to be in
+the 4th dimension as much as possible. 4th dimension is a different world altogether. Normal life rules don't apply
+there. Dopamine is free, the brain is dumped with huge amounts of information on a daily basis. The creativity and
+hobbies of people are traded for fabricated and continuous supply of a fake sense of doing something. 
+<h4><small>December 21 2020</small></h4>
+
 <h3>The new and shiny (my newest shower thought)</h3>
 <p>Why is it so that, whenever a newer verison of something comes out, we usually tend to like it more than the older
 one. I am specifically talking here about te design aspect of things, it is obvious that the newer ones will be better
