tons of changes with complete re-write of chords

--- a/chords/a.html
+++ b/chords/a.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang=en>
   <head>
-    <title>Some chords</title>
-    <link rel='stylesheet' type='text/css' href='chords_style.css'>
-    <meta charset="utf-8"/>
+    <title>Some Chords!!</title>
+    <meta charset="utf-8">
   </head>
-  <body>
-    <pre style="position:sticky;text-align:justified;font-size:15px;">
-  _____  ___   ___ ___    ___         __  __ __   ___   ____   ___   _____
- / ___/ /   \ |   |   |  /  _]       /  ]|  |  | /   \ |    \ |   \ / ___/
-(   \_ |     || _   _ | /  [_       /  / |  |  ||     ||  D  )|    (   \_ 
- \__  ||  O  ||  \_/  ||    _]     /  /  |  _  ||  O  ||    / |  D  \__  |
- /  \ ||     ||   |   ||   [_     /   \_ |  |  ||     ||    \ |     /  \ |
- \    ||     ||   |   ||     |    \     ||  |  ||     ||  .  \|     \    |
-  \___| \___/ |___|___||_____|     \____||__|__| \___/ |__|\_||_____|\___|
-   
-Because all the other websites are bloated
+  <body style="margin:auto; max-width:900px;font-family: 'Courier New', monospace;">
+    <pre style="text-align:center;font-size:20px">
+ A
 
-<a href=chords.html>Home</a>  <a href=a.html>A chords</a>  <a href=b.html>B chords</a>  <a href=c.html>C chords</a>  <a href=d.html>D chords</a>
-<a href=e.html>E chords</a>  <a href=f.html>F chords</a>  <a href=g.html>G chords</a>
+e |------0------|
+B |------2------|
+G |------2------|
+D |------2------|
+A |------0------|
+E |------x------|
+	</pre>
 
-
-    </pre>
   </body>
 </html>
 
