--- a/chords/chords.html
+++ b/chords/chords.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang=en>
   <head>
-    <title>Some chords</title>
-    <link rel='stylesheet' type='text/css' href='chords_style.css'>
-    <meta charset="utf-8"/>
+    <title>Some Chords!!</title>
+    <meta charset="utf-8">
   </head>
-  <body style="max-width: 900px;margin-left: auto;margin-right: auto">
-    <pre style="position:sticky;font-size:15px">
-  _____  ___   ___ ___    ___         __  __ __   ___   ____   ___   _____
- / ___/ /   \ |   |   |  /  _]       /  ]|  |  | /   \ |    \ |   \ / ___/
-(   \_ |     || _   _ | /  [_       /  / |  |  ||     ||  D  )|    (   \_ 
- \__  ||  O  ||  \_/  ||    _]     /  /  |  _  ||  O  ||    / |  D  \__  |
- /  \ ||     ||   |   ||   [_     /   \_ |  |  ||     ||    \ |     /  \ |
- \    ||     ||   |   ||     |    \     ||  |  ||     ||  .  \|     \    |
-  \___| \___/ |___|___||_____|     \____||__|__| \___/ |__|\_||_____|\___|
-   
-Because all the other websites are bloated
-
-<a href=chords.html>Home</a>  <a href=a.html>A chords</a>  <a href=b.html>B chords</a>  <a href=c.html>C chords</a>  <a href=d.html>D chords</a>
-<a href=e.html>E chords</a>  <a href=f.html>F chords</a>  <a href=g.html>G chords</a>
-
-
-Ideology
--------------------------------------------------------------------------------
-I am a newbie guitar player and I require to look at chord shapes every now and 
-then, whenever I google searched I found out that websites were doing all the 
-things that I didn't ask for. Like 10 ads, 20 courses etc. So I made my own 
-reference with just guitar chord shapes.
-    </pre>
+  <body style="margin:auto; max-width:900px;font-family: 'Courier New', monospace;">
+    
+    <div>
+    <h1 style="text-align:center">Some Chords</h1>
+    <h3 style="text-align:center">Because all the other websites are bloated</h3>
+    <div style="text-align:center;display:block">
+      <a href="./chords.html">Home |</a> 
+      <a href="./a.html">A Chords |</a> 
+      <a href="./b.html">B Chords |</a> 
+      <a href="./c.html">C Chords |</a> 
+      <a href="./d.html">D Chords |</a> 
+      <a href="./e.html">E Chords |</a> 
+      <a href="./f.html">F Chords |</a> 
+      <a href="./g.html">G Chords</a> 
+    </div>
+    </div>
+    <br>
+    <h3>Ideology</h3>
+    I am learning to play guitar and it is so frustrating to search chords shapes online to find websites that do
+    everything other than showing the guitar chord diagrams. So I made one for my own.
   </body>
 </html>
-
