--- a/chords/a.html
+++ b/chords/a.html
@@ -14,6 +14,48 @@ G |------2------|
 D |------2------|
 A |------0------|
 E |------x------|
+
+	
+ A major 7
+	
+e |------0------|
+B |------2------|
+G |------1------|
+D |------2------|
+A |------0------|
+E |------x------|
+	
+
+ A 7
+	
+e |------0------|
+B |------2------|
+G |------0------|
+D |------2------|
+A |------0------|
+E |------x------|
+	
+
+ A minor
+	
+e |------0------|
+B |------1------|
+G |------2------|
+D |------2------|
+A |------0------|
+E |------x------|
+	
+
+ A minor 7
+	
+e |------0------|
+B |------1------|
+G |------0------|
+D |------2------|
+A |------0------|
+E |------x------|
+	
+
 	</pre>
 
   </body>
