--- a/chords/chords.html
+++ b/chords/chords.html
@@ -24,5 +24,11 @@
     <h3>Ideology</h3>
     I am learning to play guitar and it is so frustrating to search chords shapes online to find websites that do
     everything other than showing the guitar chord diagrams. So I made one for my own.
+    <h3>How to read the diagrams</h3>
+    The chord diagrams are presented in plain ascii. Each string is represented with its name.
+    X - don't play that string 
+    O - play the string open
+    Numeral (1...) - Play the string from that fret
+    As simple as that.
   </body>
 </html>
