--- a/chords/chords.html
+++ b/chords/chords.html
@@ -13,7 +13,7 @@
       <a href="./chords.html">Home |</a> 
       <a href="./a.html">A Chords |</a> 
       <a href="./b.html">B Chords |</a> 
-      <a href="/test.txt">C Chords |</a> 
+      <a href="./c.html">C Chords |</a> 
       <a href="./d.html">D Chords |</a> 
       <a href="./e.html">E Chords |</a> 
       <a href="./f.html">F Chords |</a> 
