--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,24 @@
 <img src="pictures/think.gif" style="max-width: 50%;margin: auto; display:
 block;" alt="think" title="think">
 
+<h3>We are NOT ready!!!</h3>
+<p>Zombies chasing down and killing everybody, a huge tsunami that is wiping of all of the shores, an alien invasion
+or a deadly virus which is slowly killing all the humans. All these apocalyptic possibilities has been covered by some
+ot the othe movie and I'm sure that you might have watched a few of them. 
+<p>All these topics are good for making a movie but are far from reality. Things like these aren't happening to us.
+I see no zombies, tsunami, aliens, and viruses.
+<p>Wait a second, before you turn a blind eye towards the apocalytic possibilities. Let me remind you that we are living
+in a trailer of a deadly virus movie. Not as deadly you may say, but you can't discredit the speed with which the small
+virus had speard over this big ball of various elements, rotating in void around a big ball of fire. 
+<p>The universe is stranger than we might every thing. All to completely rule of the possibility of occurence of
+something which is very less likely is foolhardy.
+<p>The truth is that we are not ready, and can never be 100% ready. But we need to anticipate certain things and plan in
+advance if the cummulative goal of ours is to survive of this planet (or maybe some other planet). Survival ain't easy.
+We haven't really faced a survival threat as a species in the history, but we will surely be put to good test one day.
+And that day wouldn't be like the movies that you and I have wathced, I think they would be worse.
+Contd...
+<h4><small>December 26 2020</small></h4>
+
 <h3>The fourth dimension</h3>
 <p>Yes, I know that this is a rather brave statement to begin with, but I have discovered the 4th dimension. A place
 where there is no sense of time, and is governed by a god that all of us who enter the dimension bow down to.
