Content addition and improvements

--- a/chords/chords.html
+++ b/chords/chords.html
@@ -23,9 +23,11 @@
     <br>
     <h3>Ideology</h3>
     I am learning to play guitar and it is so frustrating to search chords shapes online to find websites that do
-    everything other than showing the guitar chord diagrams. So I made one for my own.
+    everything other than showing the guitar chord diagrams. So I made this simple and functional website that does what
+    it's supposed to do.<br>
+    The chord shapes may not be complete and exhaustive, I will be adding more in the future.
     <h3>How to read the diagrams</h3>
-    The chord diagrams are presented in plain ascii. Each string is represented with its name.<br>
+    The chord diagrams are presented in plain ascii. Each string is represented with its name.<p>
     X - don't play that string<br> 
     O - play the string open<br>
     Numeral (1...) - Play the string from that fret<br>
