--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ like Luke Smith and Richard Stallman who appreciate philosophies of UNIX. Keepin
 
 <img src="pictures/spiderman_red.gif" style="max-width: 50%;margin: auto; display: block;" alt="Under construction..." title="Under construction...">
 <h2>I recommend having a quick look at my blog before leaving</h2>
-<p>I write about all the things that comes to my mind there. It is my personal social media, actually it is the type of social media that we all deserve.</p>
+<p>I write about all the things that comes to my mind. It is my personal social media, actually it is the type of social media that we all deserve.</p>
 
 <footer>
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
